SERVER-58747 The ShardServerCatalogCacheLoader doesn't interrupt ongoing operations on step up